--- a/examples/example.html
+++ b/examples/example.html
@@ -3,9 +3,7 @@
 <div class="width-600 float-left" style="background: red">11</div>
 <div class="width-600 float-right" style="background: yellow">22</div>
 
-
 <div class="margin-top-150 transform-rotate(7deg) border-radius-30" style="background: yellow">22</div>
-
 
 <p style="font-size: 26px" class="text-decoration-underline">THE PRODIGY</p>
 
@@ -14,6 +12,9 @@
         size: "px"
     });
 
+    /**
+     * Experimental
+     */
     Volta.resize({
         elements: "p",
         size: "px",
