--- a/examples/example.html
+++ b/examples/example.html
@@ -1,11 +1,6 @@
 <script type="text/javascript" src="../volta.js"></script>
 
-<div class="width-600 float-left" style="background: red">11</div>
-<div class="width-600 float-right" style="background: yellow">22</div>
-
-<div class="margin-top-150 transform-rotate(7deg) border-radius-30" style="background: yellow">22</div>
-
-<p style="font-size: 80px" class="text-decoration-underline">THE PRODIGY</p>
+<p style="font-size: 20px" class="width-1400 position-fixed margin-left-300 opacity-0.2">THE PRODIGY</p>
 
 <script>
     Volta.render({
