--- a/examples/example.html
+++ b/examples/example.html
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="../volta.js"></script>
 
-<p style="font-size: 20px" class="width-1400 position-fixed margin-left-300 opacity-0.2">THE PRODIGY</p>
+<p style="font-size: 20px" class="margin-left-5-em width-1400-pt position-fixed margin-left-1-em opacity-0.2 text-align-right">THE PRODIGY</p>
 
 <script>
     Volta.render({
