--- a/examples/example.html
+++ b/examples/example.html
@@ -1,6 +1,11 @@
 <script type="text/javascript" src="../volta.js"></script>
 
-<p style="font-size: 20px" class="background-grey border-radius-10-em -webkit-border-radius-10">THE PRODIGY</p>
+<p style="font-size: 20px" class="use-custom-class merge-this background-grey">THE PRODIGY</p>
+
+<p style="font-size: 20px" class="background-grey border-radius-10-em -webkit-border-radius-10" volta="{
+    text-decoration-underline
+    color-blue
+}">THE PRODIGY</p>
 
 <script>
     Volta.render({
