--- a/examples/example.html
+++ b/examples/example.html
@@ -7,6 +7,10 @@
     color-blue
 }">THE PRODIGY</p>
 
+<fieldset class="font-size-10">
+    SCOOTER
+</fieldset>
+
 <script>
     Volta.render({
         size: "px"
