--- a/examples/example.html
+++ b/examples/example.html
@@ -1,6 +1,15 @@
 <script type="text/javascript" src="../volta.js"></script>
 
-<p style="margin-left: 100px" class="display-block calc+(margin-left-200)">THE PRODIGY</p>
+<p style="font-size: 20px" class="merge-this background-grey">THE PRODIGY</p>
+
+<p style="font-size: 20px" class="background-grey border-radius-10-em -webkit-border-radius-10" volta="{
+    text-decoration-underline
+    color-blue
+}">THE PRODIGY</p>
+
+<fieldset class="font-size-10">
+    SCOOTER
+</fieldset>
 
 <script>
     Volta.render({
