--- a/examples/example.html
+++ b/examples/example.html
@@ -1,13 +1,8 @@
 <script type="text/javascript" src="../volta.js"></script>
 
-<p style="font-size: 20px" class="merge-this background-grey">THE PRODIGY</p>
+<p style="font-size: 20px" class="background-grey border-radius-10-em">THE PRODIGY</p>
 
-<p style="font-size: 20px" class="background-grey border-radius-10-em -webkit-border-radius-10" volta="{
-    text-decoration-underline
-    color-blue
-}">THE PRODIGY</p>
-
-<fieldset class="font-size-10">
+<fieldset class="font-size-4">
     SCOOTER
 </fieldset>
 
