--- a/examples/example.html
+++ b/examples/example.html
@@ -1,10 +1,6 @@
 <script type="text/javascript" src="../volta.js"></script>
 
-<p style="font-size: 20px" class="background-grey border-radius-10-em">THE PRODIGY</p>
-
-<fieldset class="font-size-4">
-    SCOOTER
-</fieldset>
+<p class="background-grey border-radius-10-em -ca-height-+50" style="height: 50px;">THE PRODIGY</p>
 
 <script>
     Volta.render({
