--- a/examples/example.html
+++ b/examples/example.html
@@ -1,10 +1,7 @@
 <script type="text/javascript" src="../volta.js"></script>
 
-<p class="background-grey -webkit-border-radius-10-em -surround-height-550" style="height: 50px;">THE PRODIGY</p>
+<p class="background-grey -webkit-border-radius-10-em -calc-height-550" style="height: 50px;">THE PRODIGY</p>
 
-<!--
--surround+height-500
--->
 <script>
     Volta.render({
         size: "px"
