--- a/examples/example.html
+++ b/examples/example.html
@@ -15,7 +15,8 @@
         size: "px",
         compressor: 2
     });
-    Volta.log('Hello World')
 
-    LOGS('11111');
+    Volta.vlog('Volta.JS Madness!', 'green', '#ffc107')
+    // or
+    vlog('This is Volta.JS');
 </script>
