--- a/examples/example.html
+++ b/examples/example.html
@@ -1,22 +1,5 @@
 <script type="text/javascript" src="../volta.js"></script>
 
-<p class="background-grey -webkit-border-radius-10-em -calc-height-550" style="height: 50px;">THE PRODIGY</p>
-
 <script>
-    Volta.render({
-        size: "px"
-    });
-
-    /**
-     * Experimental
-     */
-    Volta.resize({
-        elements: "p",
-        size: "px",
-        compressor: 2
-    });
-
-    Volta.vlog('Volta.JS Madness!', 'green', '#ffc107')
-    // or
-    vlog('This is Volta.JS');
+    vlog('This is Volta.JS', 'text-decoration-underline');
 </script>
