--- a/examples/example.html
+++ b/examples/example.html
@@ -1,5 +1,20 @@
 <script type="text/javascript" src="../volta.js"></script>
 
+<p class="background-grey -webkit-border-radius-10-em -calc-height-550" style="height: 50px;">THE PRODIGY</p>
+
 <script>
-    vlog('This is Volta.JS', 'text-decoration-underline');
+    Volta.render({
+        size: "px"
+    });
+
+    /**
+     * Experimental
+     */
+    Volta.resize({
+        elements: "p",
+        size: "px",
+        compressor: 2
+    });
+
+    vlog('This is Volta.JS', 'background-grey');
 </script>
