--- a/examples/example.html
+++ b/examples/example.html
@@ -16,5 +16,6 @@
         compressor: 2
     });
 
-    vlog('This is Volta.JS', 'background-grey');
+    vlog('This is Volta.JS');
+    vlog('This is Volta.JS', 'background-red font-size-20');
 </script>
