--- a/examples/example.html
+++ b/examples/example.html
@@ -3,19 +3,6 @@
 <p class="background-grey -webkit-border-radius-10-em -calc-height-550" style="height: 50px;">THE PRODIGY</p>
 
 <script>
-    Volta.render({
-        size: "px"
-    });
-
-    /**
-     * Experimental
-     */
-    Volta.resize({
-        elements: "p",
-        size: "px",
-        compressor: 2
-    });
-
     vlog('This is Volta.JS');
-    vlog('This is Volta.JS', 'background-red font-size-20');
+    Volta.vlog('Hello Volta', 'background-red');
 </script>
