--- a/examples/example.html
+++ b/examples/example.html
@@ -1,5 +1,7 @@
 <script type="text/javascript" src="../volta.js"></script>
 
+<p class="border-radius-4-px" volta="background-green color-white" style="height: 50px;">SCOOTER</p>
+
 <p class="background-grey -webkit-border-radius-10-em -calc-height-550" style="height: 50px;">THE PRODIGY</p>
 
 <script>
@@ -7,9 +9,6 @@
         size: "px"
     });
 
-    /**
-     * Experimental
-     */
     Volta.resize({
         elements: "p",
         size: "px",
