--- a/examples/example.html
+++ b/examples/example.html
@@ -15,6 +15,6 @@
         compressor: 2
     });
 
-    vlog('This is Volta.JS');
+    vlog('This is Volta.JS 😃');
     Volta.vlog(' Hello Volta ', 'background-green color-white');
 </script>
