--- a/examples/example.html
+++ b/examples/example.html
@@ -16,5 +16,5 @@
     });
 
     vlog('This is Volta.JS 😃');
-    Volta.vlog(' Hello Volta ', 'background-green color-white');
+    Volta.vlog(' Hello Volta ', 'background-green color-white display-inline-block');
 </script>
