--- a/examples/example.html
+++ b/examples/example.html
@@ -4,6 +4,14 @@
 
 <p class="background-grey -webkit-border-radius-10-em -calc-height-550" style="height: 50px;">THE PRODIGY</p>
 
+<div class="topBar">
+    TOP BAR
+</div>
+
+<div class="slider">
+    SLIDER
+</div>
+
 <script>
     Volta.render({
         size: "px"
@@ -17,4 +25,11 @@
 
     vlog('This is Volta.JS 😃');
     Volta.vlog(' Hello Volta ', 'background-green color-white display-inline-block');
+
+    Volta.hider({
+        elements: {
+            '.topBar': true,
+            '.slider': false
+        }
+    });
 </script>
