--- a/examples/example.html
+++ b/examples/example.html
@@ -4,12 +4,18 @@
 
 <p class="background-grey -webkit-border-radius-10-em -calc-height-550" style="height: 50px;">THE PRODIGY</p>
 
-<div class="topBar">
-    TOP BAR
+
+
+<div id="topbar">
+    TOP BAR ID
+</div>
+
+<div class="topbar">
+    TOP BAR CLASS
 </div>
 
 <div class="slider">
-    SLIDER
+    SLIDER CLASS
 </div>
 
 <script>
@@ -28,8 +34,8 @@
 
     Volta.hider({
         elements: {
-            '.topBar': true,
-            '.slider': false
+            'topbar': true,
+            'slider': true
         }
     });
 </script>
